--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 		<header class="row">
 			<div class="col-sm-offset-1 col-sm-10">
-				<div id="logo">fieldless <span id="wth">- <a href="http://jimobrien.me/provision-fields-faster-with-fieldless" target="_blank">what's fieldless?</a></span></div>
+				<div id="logo">fieldless <span id="wth">- <a href="http://jimobrien.me/provision-fields-faster-with-fieldless" target="_blank">what is fieldless?</a></span></div>
 			</div>
 		</header>
 
