fixed firefix checkbox size issue

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 				max-height: 300px;
 				background-color: #f8f8f8;
 			}
+			input[type='checkbox'] { 
+				width: 20px; /* otherwise firefox blows this up */
+			}
 			#logo {
 				font-size: 1.5em;
 				font-style: italic;
