left align tooltips, rename folder dist to build

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 			.info:hover {
 				color: #333;
 			}
+			.ttip {
+				text-align: left;
+			}
 		</style>
 
 	</head>
@@ -94,8 +97,8 @@
 		<script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 		<script src="bower_components/angular-highlightjs/angular-highlightjs.js"></script>
 
-		<script src="dist/js/fieldless.js"></script>
-		
+		<script src="build/js/fieldless.js"></script>
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
